2022-11-30: attempt to correct GA4.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-hacker
-google_analytics: UA-221756140-1
-google_analytics: 344431359
-google_analytics: 305405777
-google_analytics: 261837494
+#google_analytics: UA-221756140-1
+#google_analytics: 344431359
+#google_analytics: 305405777
+#google_analytics: 261837494
+google_analytics: G-T0BGMBMH1Q
