--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-#google_analytics: UA-221756140-1
-google_analytics: G-T0BGMBMH1Q
+google_analytics: UA-221756140-2
+#google_analytics: G-T0BGMBMH1Q
